[package]
name = "rusty-image-proxy"
version = "0.1.0"
authors = ["Divyendu Singh <singh@prisma.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.22.3"
url = "2.1.1"
curl = "0.4.25"
actix-web = "2.0"
actix-rt = "1.0"
actix-files = "0.2.1"
derive_more = "0.99.0"
